# binscure

./: .gitignore  README.md  build.gradle  gradle.properties  obfuscator.ipr  settings.gradle
documentation/: Usage.md
gradle/wrapper/: gradle-wrapper.properties
native/: CMakeLists.txt  main.cpp
proguard/: out.map  proguard.txt
rustinter/: Cargo.toml
rustinter/src/: lib.rs
src/main/cpp/: CMakeLists.txt  com_bingait_binscure_runtime_BinscureNativeRuntime.c
src/main/kotlin/: NoVerify.java  crackme.kt
src/main/kotlin/cookiedragon/obfuscator/: CObfuscator.kt  IClassProcessor.kt  Main.kt
src/main/kotlin/org/objectweb/asm/: Type.java  (+10 more)
src/native/kotlin/: BinscureNativeRuntime.kt
src/nativeInterop/cinterop/: BinscureNativeRuntime.def
testing/: exampleConfig.yml  mappings.csv  mixins.raion.json  testconfig.yml
testing/BasicStringObfuscation/: XorReverser.java  exampleConfig.yml
testing/ares/: exampleConfig.yml  message.txt
testing/benster/: exampleConfig.yml  mappings.csv
testing/binscure/: exampleConfig.yml
testing/fizzbuzz/: StringEncTest.java  config.yml  exampleConfig.yml
testing/obftest/: NoVerify.java  exampleConfig.yml
testing/obftest/src/com/binclub/: IfStatementTest.java  Main.java  NumberTest.java  StaticFieldTest.java  StaticMethodTest.java  Test.java  ThrowableTest.java
testing/pyro/: exampleConfig.yml
testing/raion/: client.yml  clientmappings.csv  exampleConfig.yml  loader.yml  loadermappings.csv
testing/rusherhack/: exampleConfig.yml
testing/tornadic/: exampleConfig.yml
testing/trycatch/: TryCatch.java  tryCatchTest.yml
(+197 files in other folders)
