[package]
name = "rustinter"
version = "0.1.0"
authors = ["cookiedragon234 <c.o.okiedragon234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { git = "https://github.com/cookiedragon234/jni-rs" }
#jni = "0.17.0"
obfstr = "0.1.1"

[lib]
crate_type = ["cdylib"]
